syntax = "proto3";

option csharp_namespace = "GrpcService";

package product;

service ProductsService {
	rpc GetAll(EmptyMessage) returns(ProductsMessage);
    rpc GetById(ProductIdMessage) returns(ProductMessage);
    rpc Create(ProductMessage) returns(ProductMessage);
    rpc Edit(ProductMessage) returns(ProductMessage);
    rpc Delete(ProductIdMessage) returns(EmptyMessage);
}

message ProductMessage {
    int32 Id = 1;
    string ProductName = 2;
    string CategoryName = 3;
    string Manufacturer = 4;
    double Price = 5;
}

message ProductIdMessage {
    int32 Id = 1;
}

message ProductsMessage {
    repeated ProductMessage Items = 1;
}

message EmptyMessage {}